Upgrade "messages" to Java17